--- a/charts/http-demo/templates/service.yaml
+++ b/charts/http-demo/templates/service.yaml
@@ -19,6 +19,7 @@ spec:
   ports:
   - port: {{ .Values.service.externalPort }}
     targetPort: {{ .Values.service.internalPort }}
+    nodePort: 32000
     protocol: TCP
     name: http
   selector:
