--- a/charts/http-demo/values.yaml
+++ b/charts/http-demo/values.yaml
@@ -15,7 +15,7 @@ knativeDeploy: false
 
 service:
   name: http-demo
-  type: ClusterIP
+  type: NodePort
   externalPort: 80
   internalPort: 8080
   annotations:
